fix: add fix for the text overflow in Shellbar (#968)

--- a/src/shellbar.scss
+++ b/src/shellbar.scss
@@ -50,7 +50,8 @@ $block: #{$fd-namespace}-shellbar;
 
     display: flex;
     align-items: center;
-    flex: 1;
+    flex: 1 1 0;
+    overflow: hidden;
 
     &--product {
       justify-content: flex-start;
